# Agentic-Disaster-Response-Platform

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
evaluation/: expected_outcomes.json  run_evaluation.py  scenarios.json  system1_logistics.evalset.json  system1_logistics.expected.json  test_config.json
system1_manager/: main.py
system1_manager/agents/: distribution_workflow.py  inventory_agent.py  logistics_orchestrator.py  request_parser_agent.py  resource_allocation_agent.py  routing_agent.py
system1_manager/tools/: logistics_tools.py  schemas.py
system2_support/: main.py
system2_support/agents/: intake_agent.py  specialist_agents.py  support_orchestrator.py
system2_support/static/: chat.html
system2_support/tools/: a2a_tool.py  firebase_logger.py
system3_supervisor/: .gitignore  main.py
system3_supervisor/agents/: specialist_agents.py  supervisor_orchestrator.py
system3_supervisor/static/: supervisor.html
system3_supervisor/tools/: retry_config.py  supervisor_tools.py
