[project]
name = "agentic-disaster-response-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "firebase-admin>=7.4.0",
    "google-adk>=2.3.0",
    "httpx>=0.28.1",
    "uvicorn>=0.49.0",
]
