[project]
name = "agentic-disaster-response-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]==0.3.26",
    "fastapi>=0.138.1",
    "firebase-admin>=7.4.0",
    "google-adk[a2a,extensions]==2.3.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["system1_manager*", "system2_support*", "system3_supervisor*"]
exclude = ["evaluation*"]

